update config example

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,6 +1,7 @@
 [Rich Presence]
 
 client_id=577508122629767179
+virtualbox_directory="C:\Program Files\Oracle\VirtualBox\VirtualBox.exe"
 
 [In Machine]
 
