--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,8 +30,8 @@ jobs:
         python -m pip install flake8 pytest
         python -m pip install --upgrade pip
 
-        if (requirements.txt) {
-            pip install -r requirements.txt
+        if (Test-Path ".\requirements.txt") {
+            pip install -r .\requirements.txt
         }
     - name: Lint with flake8
       run: |
